--- a/_config.yml
+++ b/_config.yml
@@ -101,9 +101,9 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:freedom@kakao.com"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/coffeemiller"
+    # - label: "GitHub"
+    #   icon: "fab fa-fw fa-github"
+    #   url: "https://github.com/coffeemiller"
     #- label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
     #  url: "https://instagram.com/06.25ash"
@@ -121,12 +121,12 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://githubcom/coffeemiller"
+    # - label: "GitHub"
+    #   icon: "fab fa-fw fa-github"
+    #   url: "https://githubcom/coffeemiller"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-      url: "http://218.52.233.213:9000"
+      url: "http://118.222.185.176:9000"
     #- label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
       # url:
